# db-migrate-cli

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
blog/: dev-to-db-migrate-cli.md
db_migrate_cli/: __init__.py  cli.py  demo.py  models.py  parser.py
db_migrate_cli/analyzers/: __init__.py  drift_detector.py  migration_analyzer.py
db_migrate_cli/reporters/: __init__.py  export_reporter.py  terminal_reporter.py
tests/: conftest.py  test_analyzers.py  test_cli.py  test_models.py  test_parser.py
